GetBands ,  GetBand  and Adding Support For Xml

--- a/BandAPI/appsettings.json
+++ b/BandAPI/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+
+  "ConnectionStrings": {
+    "remote": "Data Source=45.151.250.150\\MSSQLSERVER2016;Initial Catalog=sametirk_bandapi;User Id=sametirk_cv;Password=!g9pQ8n5"
+  },
   "AllowedHosts": "*"
 }
